syntax = "proto3";

option go_package = "social/pkg/proto/gate";

import "message.proto";

service Service {
  rpc BidirectionalBinaryData(stream BinaryData) returns (stream BinaryData);
}
